# test-backend-temp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start.sh
.github/workflows/: test.yml
app/: main.py
app/api/: api.py  deps.py
app/api/endpoints/: auth.py  course.py  users.py  videos.py
app/core/: config.py  utils.py
app/db/: database.py
app/schemas/: schemas.py
app/services/: bunnycdn.py  certificates.py  progress.py  quiz.py  users.py
supabase/: init.sql
tests/: tests.py
