[tool.poetry]
name = "lingvalexa-education-backend"
version = "0.1.0"
description = "Backend for Lingvalexa Education platform."
authors = ["maxxxbond"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/maxxxbond/lingvalexa-education"
repository = "https://github.com/maxxxbond/lingvalexa-education"
keywords = ["fastapi", "education", "backend", "lingvalexa"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.11.5"}
pydantic-settings = "^2.9.1"
supabase = "^2.3.4"
httpx = "^0.27.0"
python-multipart = "^0.0.20"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[tool.poetry.scripts]
start = "app.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
plugins = []
ignore_missing_imports = true
